package com.tetras;

public enum Constructeur {
    ferrari,
    renault,
    mercedes
}