package com.tetras;

//C'est la liste des différents types de voitures instanciables

public enum Couleur {
    rouge,
    bleu,
    noir
}